set base speed instead of movement speed modifier